Initialize Attributes from a Data Table

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -75,3 +75,4 @@ ManualIPAddress=
 
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/Aura.AuraEffectActor.DurarionGameplayEffectClass",NewName="/Script/Aura.AuraEffectActor.DurationGameplayEffectClass")
++PropertyRedirects=(OldName="/Script/Aura.AuraAttributeSet.Resistance",NewName="/Script/Aura.AuraAttributeSet.Resilience")
