Implementing Auto Running

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -77,3 +77,7 @@ ManualIPAddress=
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/Aura.AuraEffectActor.DurarionGameplayEffectClass",NewName="/Script/Aura.AuraEffectActor.DurationGameplayEffectClass")
 +PropertyRedirects=(OldName="/Script/Aura.AuraAttributeSet.Resistance",NewName="/Script/Aura.AuraAttributeSet.Resilience")
+
+[/Script/NavigationSystem.NavigationSystemV1]
+bAllowClientSideNavigation=True
+
