--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -77,6 +77,7 @@ ManualIPAddress=
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/Aura.AuraEffectActor.DurarionGameplayEffectClass",NewName="/Script/Aura.AuraEffectActor.DurationGameplayEffectClass")
 +PropertyRedirects=(OldName="/Script/Aura.AuraAttributeSet.Resistance",NewName="/Script/Aura.AuraAttributeSet.Resilience")
++FunctionRedirects=(OldName="/Script/Aura.AuraProjectile.OnSpereOverlap",NewName="/Script/Aura.AuraProjectile.OnSphereOverlap")
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
