Aura Ability System Globals

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -6,3 +6,4 @@ CopyrightNotice=Copyright DeHao Zhang
 
 [/Script/GameplayAbilities.AbilitySystemGlobals]
 bUseDebugTargetFromHud=true
++AbilitySystemGlobalsClassName="/Script/Aura.AuraAbilitySystemGlobals"
