AI and Effect Actors

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -78,6 +78,7 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/Aura.AuraEffectActor.DurarionGameplayEffectClass",NewName="/Script/Aura.AuraEffectActor.DurationGameplayEffectClass")
 +PropertyRedirects=(OldName="/Script/Aura.AuraAttributeSet.Resistance",NewName="/Script/Aura.AuraAttributeSet.Resilience")
 +FunctionRedirects=(OldName="/Script/Aura.AuraProjectile.OnSpereOverlap",NewName="/Script/Aura.AuraProjectile.OnSphereOverlap")
++PropertyRedirects=(OldName="/Script/Aura.AuraEffectActor.bDestroyOnEffectRemoval",NewName="/Script/Aura.AuraEffectActor.bDestroyOnEffectApplication")
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
