Melee Attack Ability

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -79,6 +79,7 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/Aura.AuraAttributeSet.Resistance",NewName="/Script/Aura.AuraAttributeSet.Resilience")
 +FunctionRedirects=(OldName="/Script/Aura.AuraProjectile.OnSpereOverlap",NewName="/Script/Aura.AuraProjectile.OnSphereOverlap")
 +PropertyRedirects=(OldName="/Script/Aura.AuraEffectActor.bDestroyOnEffectRemoval",NewName="/Script/Aura.AuraEffectActor.bDestroyOnEffectApplication")
++PropertyRedirects=(OldName="/Script/Aura.CharacterClassDefaultInfo.CommonAbilities",NewName="/Script/Aura.CharacterClassDefaultInfo.StartupAbilities")
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
