--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/StartupMap.StartupMap
-EditorStartupMap=/Game/Maps/StartupMap.StartupMap
+GameDefaultMap=/Game/Maps/Dungeon.Dungeon
+EditorStartupMap=/Game/Maps/Dungeon.Dungeon
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
@@ -140,4 +140,8 @@ bAllowClientSideNavigation=True
 +CollisionChannelRedirects=(OldName="Dynamic",NewName="WorldDynamic")
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
+
+[/Script/Engine.RenderSettings]
+r.TextureStreaming=True
+r.Streaming.PoolSize=1000
 
