--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -80,6 +80,7 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/Aura.AuraProjectile.OnSpereOverlap",NewName="/Script/Aura.AuraProjectile.OnSphereOverlap")
 +PropertyRedirects=(OldName="/Script/Aura.AuraEffectActor.bDestroyOnEffectRemoval",NewName="/Script/Aura.AuraEffectActor.bDestroyOnEffectApplication")
 +PropertyRedirects=(OldName="/Script/Aura.CharacterClassDefaultInfo.CommonAbilities",NewName="/Script/Aura.CharacterClassDefaultInfo.StartupAbilities")
++FunctionRedirects=(OldName="/Script/Aura.AuraBeamSpell.StoreOwnerPlayerController",NewName="/Script/Aura.AuraBeamSpell.StoreOwnerVariables")
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
