Gameplay Cue Notify Actor

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -7,3 +7,4 @@ CopyrightNotice=Copyright DeHao Zhang
 [/Script/GameplayAbilities.AbilitySystemGlobals]
 bUseDebugTargetFromHud=true
 +AbilitySystemGlobalsClassName="/Script/Aura.AuraAbilitySystemGlobals"
++GameplayCueNotifyPaths=/Game/Blueprints/AbilitySystem/GameplayCueNotifies
