--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -83,6 +83,8 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/Aura.AuraEffectActor.bDestroyOnEffectRemoval",NewName="/Script/Aura.AuraEffectActor.bDestroyOnEffectApplication")
 +PropertyRedirects=(OldName="/Script/Aura.CharacterClassDefaultInfo.CommonAbilities",NewName="/Script/Aura.CharacterClassDefaultInfo.StartupAbilities")
 +FunctionRedirects=(OldName="/Script/Aura.AuraBeamSpell.StoreOwnerPlayerController",NewName="/Script/Aura.AuraBeamSpell.StoreOwnerVariables")
++PropertyRedirects=(OldName="/Script/Aura.AuraCharacterBase.bIsShockLoop",NewName="/Script/Aura.AuraCharacterBase.bIsBeingShocked")
++PropertyRedirects=(OldName="/Script/Aura.AuraCharacterBase.bIsBeingShock",NewName="/Script/Aura.AuraCharacterBase.bIsBeingShocked")
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
