--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -88,6 +88,7 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/Aura.AuraBeamSpell.StoreOwnerPlayerController",NewName="/Script/Aura.AuraBeamSpell.StoreOwnerVariables")
 +PropertyRedirects=(OldName="/Script/Aura.AuraCharacterBase.bIsShockLoop",NewName="/Script/Aura.AuraCharacterBase.bIsBeingShocked")
 +PropertyRedirects=(OldName="/Script/Aura.AuraCharacterBase.bIsBeingShock",NewName="/Script/Aura.AuraCharacterBase.bIsBeingShocked")
++ClassRedirects=(OldName="/Script/Aura.ArcanceShards",NewName="/Script/Aura.ArcaneShards")
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
