--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,7 +4,7 @@ net.MaxRPCPerNetUpdate=10
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/MainMenu.MainMenu
-EditorStartupMap=/Game/Maps/Dungeon.Dungeon
+EditorStartupMap=/Game/Maps/LoadMenu.LoadMenu
 GameInstanceClass=/Game/Blueprints/Game/BP_AuraGameInstance.BP_AuraGameInstance_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
